<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:cardCornerRadius="10dp"
            android:elevation="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gameImage_data"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/detail_picture" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameName_data"
            android:text="@string/game_names"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gamePopular_data"
            android:text="@string/game_popularity"
            android:textStyle="italic"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameDeail_data"
            android:text="@string/game_details"
            android:textSize="16sp" />



    </LinearLayout>






</ScrollView>