<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/my_image_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="100dp"
        android:elevation="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/my_image"
            android:contentDescription="@string/image_profile" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_text_name"
        android:text="@string/my_name"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/my_image_card"
        android:layout_marginTop="50dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_text_email"
        android:text="@string/my_email"
        android:layout_below="@id/my_text_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>